Fix bug: display color on mobile grey

--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,8 @@ h1 {
 }
 
 #display {
-    background-color: red;
-    color: var(--mauve);
+    background-color: var(--baby-blue);
+    color: black;
     font-family: inherit;
     font-size: var(--display-font-size);
     text-align: center;
@@ -204,6 +204,11 @@ footer {
 }
 
 @media (min-width: 600px) {
+    #display {
+        background-color: black;
+        color: var(--mauve);
+    }
+
     .header {
         font-size: 4vh;
     }
@@ -218,7 +223,7 @@ footer {
     }
 
     footer {
-        height: 4vh;
+        height: 6vh;
     }
 
     .footerName, #github {
